<resources>
    <string name="app_name">MiniProjectLiebgott</string>

    <!-- Home Page -->
    <string name="title">Tongue Check</string>
    <string name="analyse_your_tongue">Analyse Your Tongue</string>
    <string name="daily_check">Daily Check</string>

    <!-- Page Quick Analyse -->
    <string name="Title_quick_analyse">Quick Analyse</string>
    <string name="take_picture">Take a picture</string>
    <string name="tongue2">tongue2</string>
    <string name="tongue1">tongue1</string>
    <string name="button">Button</string>

    <!-- Daily check Analyse -->
    <string name="add_New_Tongue">Add Your Day Tongue</string>


    <!-- Page detail Analyse -->
    <string name="feeling">Feeling</string>
    <string name="date">Date</string>
    <string name="tongueone">tongueone</string>
    <string name="imagetongue2">imagetongue2</string>
    <string name="imagetongue6">imagetongue6</string>
    <string name="imagetongue5">imagetongue5</string>
    <string name="imagetongue3">imagetongue3</string>
    <string name="imagetongue1">imagetongue1</string>
    <string name="imagetongue4">imagetongue4</string>
    <string name="closewindow">closewindow</string>


    <!-- Page details analyse -->
    <string-array name="Tongue_Type">
        <item>Light Pink</item>
        <item>Gray Tongue Debris</item>
        <item>Yellow Tongue Debris</item>
        <item>Violet</item>
        <item>Red </item>
        <item>Bright Red </item>

    </string-array>

    <!-- Popup description -->
    <!-- Light pink -->
    <string name="light_pink">Light Pink</string>
    <string name="a_pale_swollen_tongue">A pale, swollen tongue</string>

    <!-- Bright red -->
    <string name="bright_red">Bright Red</string>
    <string name="a_thick_crimson_red_tongue">A thick, crimson-red tongue</string>

    <!-- Yellow tongue debris  -->
    <string name="Yellow_tongue_debris">Yellow Tongue Debris</string>
    <string name="The_yellow_coating">The yellow coating</string>

    <!-- Red Tongue Debris  -->
    <string name="Red_Tongue_Debris">Red Tongue Debris</string>
    <string name="A_thick_crimson_red_tongue">A thick, crimson red tongue</string>

    <!-- Gray Tongue Debris  -->
    <string name="Gray_Tongue_Debris">Gray Tongue Debris</string>
    <string name="The_dark_plaster">The Dark Plaster</string>

    <!-- Violet  -->
    <string name="Violet">Violet</string>
    <string name="Bluish_red_tongue">Bluish red tongue</string>

    <!-- Red  -->
    <string name="A_thin_light_red_tongue">A thin, light red tongue</string>
    <string name="Red">Red</string>
    <string name="todo">TODO</string>
    <string name="take_a_picture">take a picture</string>
    <string name="welcomepage">welcomepage</string>
    <string name="image">image</string>


</resources>