<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TongueDetail"
    android:background="@drawable/bg_activities">

    <!-- Header -->
    <TextView
        android:id="@+id/textView3"
        style="@style/Tongue_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="60dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/tongue1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/headera" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="69dp"
        android:layout_height="64dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/tongue2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/headerb" />

    <EditText
        android:id="@+id/editTextFeeling"
        android:layout_width="325dp"
        android:layout_height="47dp"
        android:layout_marginTop="92dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/feeling"
        android:inputType="textMultiLine"
        android:maxLines="4"
        android:minLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDatee" />

    <Spinner
        android:id="@+id/spinnerTongueType"
        android:layout_width="326dp"
        android:layout_height="51dp"
        android:layout_marginBottom="20dp"
        android:entries="@array/Tongue_Type"
        app:layout_constraintBottom_toTopOf="@+id/editTextFeeling"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDatee"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editTextDatee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="328dp"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:autofillHints="" />


</androidx.constraintlayout.widget.ConstraintLayout>