<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DailyCheck"
    android:background="@drawable/bg_activitiesmain">

    <!-- Header -->
    <TextView
        android:id="@+id/textView3"
        style="@style/Tongue_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="60dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/tongue1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/headera" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="69dp"
        android:layout_height="64dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/tongue2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/headerb" />

    <Button
        android:id="@+id/buttonAnalyseYourTongue"
        android:layout_width="212dp"
        android:layout_height="56dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="96dp"
        android:onClick="buttonAddClicked"
        android:text="@string/add_New_Tongue"
        android:textStyle="bold"
        android:backgroundTint="@color/button_background_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_Tongue"
        android:layout_width="381dp"
        android:layout_height="475dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />


</androidx.constraintlayout.widget.ConstraintLayout>