<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_activities"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonAnalyseYourTongue"
        android:layout_width="212dp"
        android:layout_height="56dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="164dp"
        android:background="@color/teal_200"
        android:text="@string/analyse_your_tongue"
        style="@style/Button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonDailyCheck"
        android:layout_width="212dp"
        android:layout_height="56dp"
        android:layout_marginTop="84dp"
        style="@style/Button_text"
        android:text="@string/daily_check"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/buttonAnalyseYourTongue"
        app:layout_constraintStart_toStartOf="@+id/buttonAnalyseYourTongue"
        app:layout_constraintTop_toBottomOf="@+id/buttonAnalyseYourTongue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:textColor="#777070"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Tongue Check" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="60dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/tongue1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/headera" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="69dp"
        android:layout_height="64dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/tongue2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/headerb" />


</androidx.constraintlayout.widget.ConstraintLayout>